test/invalid/for-1.js
var z = false;
for (var i = 2; i; i = 3) {
    z = i;
}
